--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Leeds Trinity University</h3>
+              <div class="subheading mb-3">BA Honours</div>
+              <div>Accounting and Business</div>
+        
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2006 - May 2010</span>
