--- a/index.html
+++ b/index.html
@@ -155,18 +155,18 @@
         
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">September 2018 - June 2020</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Bradford College</h3>
+              <div class="subheading mb-3">Pearson BTEC Level 3 Diploma in Business</div>
+ 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">September 2013 - June 2015</span>
             </div>
           </div>
 
