--- a/index.html
+++ b/index.html
@@ -167,8 +167,10 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2013 - June 2015</span>
+			 <h3 class="mb-0">Bradford College</h3>
             </div>
           </div>
+		  
 
         </div>
       </section>
