--- a/index.html
+++ b/index.html
@@ -168,10 +168,18 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2013 - June 2015</span>
             </div>
-			<h3 class="mb-0">Bradford College</h3>
           </div>
 		  
-
+    <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Bradford College</h3>
+              <div class="subheading mb-3">Pearson BTEC Level 3 Diploma in Business</div>
+			 <div class="subheading mb-3">Level 2 Certificate in Personal Finance</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2013 - June 2015</span>
+            </div>
+          </div>
         </div>
       </section>
 
