--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 		  
     <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Bradford College</h3>
-              <div class="subheading mb-3">Pearson BTEC Level 3 Diploma in Business</div>
+              <h3 class="mb-0">All Saints Catholic College</h3>
+              <div class="subheading mb-3"></div>
 			 <div class="subheading mb-3">Level 2 Certificate in Personal Finance</div>
             </div>
             <div class="resume-date text-md-right">
