--- a/index.html
+++ b/index.html
@@ -174,10 +174,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">All Saints Catholic College</h3>
               <div class="subheading mb-3"></div>
-			 <div class="subheading mb-3">Level 2 Certificate in Personal Finance</div>
+			 <div class="subheading mb-3">10 GCSEs including English and Maths at grade C and above</div>
+       <div class="subheading mb-3">Adult Literacy Level 2</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2013 - June 2015</span>
+              <span class="text-primary">August 2011 - June 2012</span>
             </div>
           </div>
         </div>
