--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">Leeds Trinity University  · Brownberrie Ln, Horsforth, Leeds LS18 5HD ·
             <a href="mailto:name@email.com">sdukesey@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">I have an enquiring mind and I like to spend time resolving differences. I find minutely checking the detail of the constitute parts and seeing them result in a balanced and proven answer, as a major achievement. I have an enquiring mind and I like to spend time resolving differences.</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
