--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@
           </ul>
         </div>
       </section>
+	    
+	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="cv">
+	</section>
 
     </div>
 
